[project]
name = "crawl-data"
version = "0.1.0"
description = "Vietnamese stock-market news/research crawler (Vietstock, Cafef, SSI, HSC, VNDIRECT)"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "fake-useragent>=1.4.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[tool.uv]
package = false  # scripts-only project (no installable package)

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "diff-cover>=9.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
extend-exclude = [".claude", "data", "aggregated", "docs", "pdf"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: happy-path run of a crawler/script on saved fixtures (no live network)",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
